Greasepencil vertex paint mode crash #84362

Closed
opened 2021-01-04 05:41:23 +01:00 by raylee · 8 comments

System Information
Operating system:windows10 x64
Graphics card:GTX1060ti

Blender Version
2.83.9 &2.91

Short description of error
Greasepencil object problem.The software crashes if you turn on the subdivision in vertex paint mode

Exact steps for others to reproduce the error
https://youtu.be/U5kEk7IFC1Y

**System Information** Operating system:windows10 x64 Graphics card:GTX1060ti **Blender Version** 2.83.9 &2.91 **Short description of error** Greasepencil object problem.The software crashes if you turn on the subdivision in vertex paint mode **Exact steps for others to reproduce the error** https://youtu.be/U5kEk7IFC1Y
Author

Added subscriber: @RayLee

Added subscriber: @RayLee
raylee changed title from grensepencil vertex paint mode crash to Greasepencil vertex paint mode crash 2021-01-04 05:43:26 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-01-04 09:32:34 +01:00
Member

Can confirm.
Reminds me of #78884 (Grease Pencil: Crash weight painting on stroke with generative modifier [subdivide] - also generative modifiers create actual editable points?)
(which btw. is not crashing anymore, but is flashing with random dots now...)
Will check on this.

6  blender::gpu::GLContext::orphans_clear gl_context.cc  218  0xa20fdec      
7  blender::gpu::GLContext::activate      gl_context.cc  133  0xa20fae4      
8  GPU_context_active_set                 gpu_context.cc 132  0xa1eefda      
9  DRW_opengl_context_enable_ex           draw_manager.c 3089 0x3519f3f      
10 DRW_opengl_context_enable              draw_manager.c 3119 0x3519fe9      
11 GPU_viewport_bind                      gpu_viewport.c 505  0xa20b0b2      
12 wm_draw_region_bind                    wm_draw.c      488  0x323edc0      
13 wm_draw_window_offscreen               wm_draw.c      730  0x323f894      
14 wm_draw_window                         wm_draw.c      872  0x323fe60      
15 wm_draw_update                         wm_draw.c      1073 0x3240498      
16 WM_main                                wm.c           641  0x323ccf1      
17 main                                   creator.c      522  0x2ca7e5d      

Can confirm. Reminds me of #78884 (Grease Pencil: Crash weight painting on stroke with generative modifier [subdivide] - also generative modifiers create actual editable points?) (which btw. is not crashing anymore, but is flashing with random dots now...) Will check on this. ``` 6 blender::gpu::GLContext::orphans_clear gl_context.cc 218 0xa20fdec 7 blender::gpu::GLContext::activate gl_context.cc 133 0xa20fae4 8 GPU_context_active_set gpu_context.cc 132 0xa1eefda 9 DRW_opengl_context_enable_ex draw_manager.c 3089 0x3519f3f 10 DRW_opengl_context_enable draw_manager.c 3119 0x3519fe9 11 GPU_viewport_bind gpu_viewport.c 505 0xa20b0b2 12 wm_draw_region_bind wm_draw.c 488 0x323edc0 13 wm_draw_window_offscreen wm_draw.c 730 0x323f894 14 wm_draw_window wm_draw.c 872 0x323fe60 15 wm_draw_update wm_draw.c 1073 0x3240498 16 WM_main wm.c 641 0x323ccf1 17 main creator.c 522 0x2ca7e5d ```

Added subscriber: @antoniov

Added subscriber: @antoniov

@lichtwerk Let me know if you need help. And, agree, weight paint and vertex paint use similar code, so maybe is the same of #78884

@lichtwerk Let me know if you need help. And, agree, weight paint and vertex paint use similar code, so maybe is the same of #78884
Philipp Oeser was unassigned by Antonio Vazquez 2021-01-04 10:29:21 +01:00
Antonio Vazquez self-assigned this 2021-01-04 10:29:21 +01:00

This issue was referenced by 5e38384034

This issue was referenced by 5e38384034650f75e382366a312099c2544386ae

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84362
No description provided.