Fix T84362: Crash when use Vertex Paint in subdivide strokes

Maniphest Tasks: T84362

Differential Revision: https://developer.blender.org/D9983